@startuml

' ===== Domain =====
note as TypeAliases
using Price = uint64_t;
using Qty = uint64_t;
using BidsMap = std::map<Price, Qty, std::greater<>>;
using AsksMap = std::map<Price, Qty, std::less<>>;
end note

struct SymbolScales {
    +priceScale : uint64_t
    +qtyScale : uint64_t
}

struct Level {
    +price : Price
    +qty : Qty
}

struct OrderBookDelta {
    +firstUpdate : uint64_t
    +lastUpdate : uint64_t
    +bids : std::vector<Level>
    +asks : std::vector<Level>
}

struct OrderBookSnapshot {
    +lastUpdate : uint64_t
    +bids : std::vector<Level>
    +asks : std::vector<Level>
}

' ===== Interfaces =====
interface ILiveMarketData {
    +start(symbol: std::string_view, onText: OnText) : void
    +stop() : void
}

interface ISnapshotSource {
    +getSnapshotAsync(onSnapshot: OnSnapshot) : void
}

interface IOrderBookSync {
    +onDelta(delta: const OrderBookDelta&) : void
    +onSnapshot(snapshot: const OrderBookSnapshot&) : void
    +start(symbol: std::string_view) : void
    +stop() : void
}

' ===== Implemented classes =====
class BinanceLiveMarketData implements ILiveMarketData {
    +start(symbol: std::string_view, onText: OnText) : void
    +stop() : void
    -getTarget(symbol: std::string_view) : std::string
    -host_ : std::string
    -port_ : std::string
    -updateSpeedMs_ : std::string
}

class BinanceScalesSource {
    +getScales(symbol: std::string_view) : SymbolScales
    -buildUrl(symbol: std::string_view) : std::string
    -scaleFromStep(step: std::string_view) : uint64_t
}

class BinanceAPIParser {
    +parseDelta(payload: std::string_view) : OrderBookDelta
    +parseSnapshot(payload: std::string_view) : OrderBookSnapshot
    -scales_ : SymbolScales
}

class BinanceSnapshotSource implements ISnapshotSource {
    +getSnapshotAsync(onSnapshot: OnSnapshot) : void
    -buildDepthUrl() : std::string
    -symbol_ : std::string
    -scales_ : SymbolScales
}

class OrderBook {
    +applySnapshot(snapshot: const OrderBookSnapshot&) : void
    +applyDelta(delta: const OrderBookDelta&) : void
    +getBids() : const BidsMap&
    +getAsks() : const AsksMap&
    -lastUpdate_ : uint64_t
    -asks_ : AsksMap
    -bids_ : BidsMap
}

class BinanceOrderBookSync implements IOrderBookSync {
    +BinanceOrderBookSync(io: boost::asio::io_context&, snapshotSource: ISnapshotSource&, liveMarketData: ILiveMarketData&, scales: SymbolScales)
    +onDelta(delta: const OrderBookDelta&) : void
    +onSnapshot(snapshot: const OrderBookSnapshot&) : void
    +start(symbol: std::string_view) : void
    +stop() : void
    +setOnBookUpdated(onBookUpdated: OnBookUpdated) : void
    -book_ : OrderBook
    -snapshotSource_ : ISnapshotSource&
    -liveMarketData_ : ILiveMarketData&
    -parser_ : BinanceAPIParser
    -scales_ : SymbolScales
    -state_ : State
}

class Renderer {
    +render(book: const OrderBook&, stats: const SyncStats&) : void
}

class SfmlRenderer {
    +run(getFrame: getFrameFn, onClose: onCloseFn) : bool
}

' ===== Relations =====
BinanceScalesSource ..> SymbolScales
BinanceSnapshotSource --> BinanceAPIParser : parses snapshot JSON
BinanceAPIParser ..> SymbolScales
BinanceAPIParser ..> OrderBookDelta
BinanceAPIParser ..> OrderBookSnapshot
OrderBook ..> OrderBookDelta
OrderBook ..> OrderBookSnapshot

BinanceOrderBookSync --> OrderBook : apply*
BinanceOrderBookSync --> ISnapshotSource : requestSnapshot()
BinanceOrderBookSync --> ILiveMarketData : start()/stop()
BinanceOrderBookSync --> BinanceAPIParser : parse delta
Renderer ..> OrderBook : render/read
SfmlRenderer ..> BinanceOrderBookSync : displays SyncStats

note bottom
main.cpp wiring:
1) BinanceScalesSource.getScales(symbol)
2) construct BinanceSnapshotSource(io, symbol, scales)
3) construct BinanceOrderBookSync(io, snapshotSource, liveMarketData, scales)
4) choose Renderer (terminal) or SfmlRenderer (GUI)
end note

@enduml
